Cmake build plugin - compile commands db

--- a/plugins/cmake/Makefile.am
+++ b/plugins/cmake/Makefile.am
@@ -10,12 +10,15 @@ libcmake_plugin_la_SOURCES = \
 	ide-cmake-builder.h \
 	ide-cmake-build-task.c \
 	ide-cmake-build-task.h \
+	ide-cmake-compile-db.c \
+	ide-cmake-compile-db.h \
 	ide-cmake-build-system.c \
 	ide-cmake-build-system.h \
 	$(NULL)
 
-libcmake_plugin_la_CFLAGS = $(PLUGIN_CFLAGS)
+libcmake_plugin_la_CFLAGS = $(PLUGIN_CFLAGS) $(JSON_CFLAGS)
 libcmake_plugin_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libcmake_plugin_la_LIBADD = $(JSON_LIBS)
 
 include $(top_srcdir)/plugins/Makefile.plugin
 
